<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.fragments.ResultFragment">

    <TextView
        android:id="@+id/text_results"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/results"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb_results"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="64dp"
        android:progress="100"
        android:progressDrawable="@drawable/circular_progress"
        app:layout_constraintEnd_toEndOf="@+id/text_results"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/text_results"
        app:layout_constraintTop_toBottomOf="@+id/text_results" />

    <TextView
        android:id="@+id/tv_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_results"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/pb_results"
        app:layout_constraintEnd_toEndOf="@+id/pb_results"
        app:layout_constraintStart_toStartOf="@+id/pb_results"
        app:layout_constraintTop_toTopOf="@+id/pb_results" />

    <TextView
        android:id="@+id/text_correct_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/correct_answers"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_results"
        app:layout_constraintTop_toBottomOf="@+id/pb_results" />

    <TextView
        android:id="@+id/text_wrong_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/wrong_answers"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_correct_answer"
        app:layout_constraintTop_toBottomOf="@+id/text_correct_answer" />

    <TextView
        android:id="@+id/text_missed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/questions_missed"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_correct_answer"
        app:layout_constraintTop_toBottomOf="@+id/text_wrong_answer" />

    <TextView
        android:id="@+id/tv_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_a"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/text_results"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/text_correct_answer"
        app:layout_constraintTop_toTopOf="@+id/text_correct_answer" />

    <TextView
        android:id="@+id/tv_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_a"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_correct"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/text_wrong_answer"
        app:layout_constraintTop_toTopOf="@+id/text_wrong_answer" />

    <TextView
        android:id="@+id/tv_missed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_a"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_wrong"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/text_missed"
        app:layout_constraintTop_toTopOf="@+id/text_missed" />

    <Button
        android:id="@+id/btn_back_to_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/primary_button_bg"
        android:text="@string/back_to_home"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_missed"
        app:layout_constraintStart_toStartOf="@+id/text_missed"
        app:layout_constraintTop_toBottomOf="@+id/text_missed" />
</androidx.constraintlayout.widget.ConstraintLayout>