<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.fragments.DetailsFragment">

    <ImageView
        android:id="@+id/iv_detail_banner"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/content_desc_banner"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder_image" />

    <ScrollView
        android:id="@+id/scroll_view_quiz"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_start_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_banner">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/quiz_title"
                android:textColor="@color/colorPrimary"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineHeight="28dp"
                android:text="@string/quiz_description"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/tv_detail_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/difficulty"
                android:textColor="@color/colorLightText"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_desc"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_desc" />

            <TextView
                android:id="@+id/tv_detail_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/total_questions"
                android:textColor="@color/colorLightText"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_difficulty"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_difficulty" />

            <TextView
                android:id="@+id/tv_detail_last_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/your_last_score"
                android:textColor="@color/colorLightText"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_total"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_total" />

            <TextView
                android:id="@+id/tv_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/n_a"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tv_detail_difficulty"
                app:layout_constraintTop_toTopOf="@+id/tv_detail_difficulty" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_difficulty"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tv_detail_total"
                app:layout_constraintTop_toTopOf="@+id/tv_detail_total" />

            <TextView
                android:id="@+id/tv_last_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_total"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tv_detail_last_score"
                app:layout_constraintTop_toTopOf="@+id/tv_detail_last_score" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_start_quiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/primary_button_bg"
        android:text="@string/start_quiz"
        android:textAllCaps="false"
        android:visibility="invisible"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_view_quiz"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>